# Ashura-s3-idf

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
include/: config.h  hal.h  (+1 more)
src/: CMakeLists.txt  idf_component.yml  main.cpp
src/application/pomodoro/: PomodoroConfig.h  PomodoroEngine.h
src/application/vibes/: Animation.h  AnimationPlayer.h  VibeRegistry.h
src/application/vibes/gifs/: beFree.h  bloom.h  fuckYou.h  kakashi.h  kuro.h  monkey_walk.h  nocturne.h  shoyo.h  specBoy.h
src/application/wled/: WledClient.h  WledDevice.h  WledDiscovery.h  WledManager.cpp  WledManager.h  WledState.h
src/companion/: CompanionRenderer.h  EyeParams.h  MoodEngine.h
src/core/: AshuraCore.cpp  AshuraCore.h  AshuraRecord.h  DisplayManager.h  EventBus.h  Loader.h  NotificationManager.h  TimeManager.h  UIManager.h  WiFiManager.cpp  WiFiManager.h
src/main/: CMakeLists.txt  main.cpp
src/network/: MessageRouter.cpp  MessageRouter.h  WebSocketManager.cpp  WebSocketManager.h
src/services/: DeviceService.cpp  DeviceService.h  IService.h  PomodoroService.h
src/storage/: AshuraPrefs.h
src/ui/assets/icons/: AppIcon.h  clock.h  games.h  settings.h  vibes.h  wled.h
src/ui/screens/: AppMenuScreen.h  HomeScreen.h  IScreen.h  SubMenuScreen.h
src/ui/screens/bootScreen/: SplashScreen.h
src/ui/screens/clockApp/: ClockFaceScreen.h
src/ui/screens/pomodoro/: PomodoroActiveScreen.h  PomodoroCompleteScreen.h  PomodoroSetupScreen.h
src/ui/screens/settings/: SystemStatsScreen.h
src/ui/widgets/: CharPickerWidget.h
(+16 files in other folders)
